--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: okmi4
+  name: oemiga
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "okmi4"
+  - name: "oemiga"
     port: 8080
   selector:
-    app: okmi4
+    app: oemiga
